--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon index",
+    "start-prod": "NODE_ENV=production nodemon index",
+    "start-stage": "NODE_ENV=staging nodemon index",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -18,7 +20,7 @@
   },
   "homepage": "https://github.com/AssaultKoder95/zoggy-app#readme",
   "dependencies": {
-    "dotenv": "^10.0.0",
+    "config": "^3.3.6",
     "express": "^4.17.1",
     "joi": "^17.4.2",
     "nodemon": "^2.0.15",
